[package]
name = "create-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
aws = { path = "../../aws" }
#
aws-sdk-dynamodb = "0.12"
lambda_http = "0.5"
lambda_runtime = "0.5"
serde_json = "1.0"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.0", features = ["v4"] }
